code/version2.0/slurm_files/Alexnet/pretrained/archived/Alexoffice31mask2A_D_pretrained.spartan-gpgpu050.33111281.err
  File "../../../source_only.py", line 375
    parser.add_argument('--resume', default=False, default =  None, type = str)
                                                  ^
SyntaxError: keyword argument repeated
